clang/test/BSC/Negative/NullabilityCheck/nested_owned_struct/nested_owned_struct.cbs
// RUN: %clang_cc1 -nullability-check=all -verify %s

_Safe T *_Owned safe_malloc<T>(T t);
_Safe void safe_free(void *_Owned p);

_Owned struct B{
    public:
    int * _Owned p;
    ~B(B this){
        safe_free((void*_Owned)this.p);
    }
};

_Owned struct A{
    public:
    B b;
};

int main(){
    B b1={};// expected-error {{`b1.p` is a _Nonnull pointer and must be properly initialized.}}
    return 0;
}



